lifeguard-derive/tests/ui/compile_error_try_into_model_custom_error_convert.stderr
error[E0601]: `main` function not found in crate `$CRATE`
   --> tests/ui/compile_error_try_into_model_custom_error_convert.rs:145:2
    |
145 | }
    |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_try_into_model_custom_error_convert.rs`

error[E0277]: `?` couldn't convert the error to `CustomError`
   --> tests/ui/compile_error_try_into_model_custom_error_convert.rs:140:27
    |
140 | #[derive(DeriveTryIntoModel)]
    |          -----------------^
    |          |                |
    |          |                the trait `From<ParseIntError>` is not implemented for `CustomError`
    |          this can't be annotated with `?` because it has type `Result<_, ParseIntError>`
    |
note: `CustomError` needs to implement `From<ParseIntError>`
   --> tests/ui/compile_error_try_into_model_custom_error_convert.rs:119:1
    |
119 | pub struct CustomError {
    | ^^^^^^^^^^^^^^^^^^^^^^
    = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
    = note: this error originates in the derive macro `DeriveTryIntoModel` (in Nightly builds, run with -Z macro-backtrace for more info)
